--- a/src/components/YoutubeEmbed/style.scss
+++ b/src/components/YoutubeEmbed/style.scss
@@ -1,14 +1,14 @@
-.video-responsive {
-    position: relative;
-    overflow: hidden;
-    padding-top: 56.25%; /* 16:9 aspect ratio */
-  }
+// .video-responsive {
+//     position: relative;
+//     overflow: hidden;
+//     padding-top: 56.25%; /* 16:9 aspect ratio */
+//   }
   
-  .video-responsive .youtube-player {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
+//   .video-responsive .youtube-player {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//   }
   
